show details in modal

--- a/app/views/bowties/index.html.erb
+++ b/app/views/bowties/index.html.erb
@@ -9,9 +9,15 @@
 
   <div class="container">
     <h1>Bowties</h1>
+
+    <div class="bowties">
+
+    </div>
+
+    <<%= render 'modal' %>
+
   </div>
 
-</div>
 </body>
 
 
