--- a/app/views/bowties/_modal.html.erb
+++ b/app/views/bowties/_modal.html.erb
@@ -3,11 +3,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h4 class="modal-title" id="myModalLabel">Bowtie Info</h4>
+        <h4 class="modal-title" id="myModalLabel"></h4>
       </div>
       <div class="modal-body">
 
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-primary">Edit</button>
         <button type="button" class="btn btn-primary">Delete</button>
