--- a/app/views/bowties/index.html.erb
+++ b/app/views/bowties/index.html.erb
@@ -1,10 +1,11 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Bowties Gallery</title>
 </head>
 
 <body>
+
   <%= render 'nav' %>
 
   <div class="container">
@@ -14,7 +15,8 @@
 
     </div>
 
-    <<%= render 'modal' %>
+    <%= render 'modal' %>
+    <%= render 'modalCreate' %>
 
   </div>
 
