--- a/app/views/bowties/_modal.html.erb
+++ b/app/views/bowties/_modal.html.erb
@@ -10,8 +10,8 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Edit</button>
-        <button type="button" class="btn btn-primary">Delete</button>
+        <button type="button" class="btn btn-primary" id="edit">Edit</button>
+        <button type="button" class="btn btn-primary" id="delete">Delete</button>
       </div>
     </div>
   </div>
