--- a/app/views/bowties/_modalCreate.html.erb
+++ b/app/views/bowties/_modalCreate.html.erb
@@ -11,8 +11,8 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save</button>
-        <button type="button" class="btn btn-primary">Cancel</button>
+        <button type="button" class="btn btn-primary" id="save">Save</button>
+        <button type="button" class="btn btn-primary" id="cancel">Cancel</button>
       </div>
     </div>
   </div>
