--- a/app/views/bowties/_newform.html.erb
+++ b/app/views/bowties/_newform.html.erb
@@ -1,38 +1,38 @@
 <div class="newForm">
   <div class="form-group row">
-    <label for="example-text-input" class="col-xs-2 col-form-label">Material</label>
+    <label for="material" class="col-xs-2 col-form-label">Material</label>
     <div class="col-sm-4">
-      <input class="form-control" type="text" value="Material" id="example-text-input">
+      <input class="form-control" type="text" value="Material" id="material">
     </div>
   </div>
   <div class="form-group row">
-    <label for="example-text-input" class="col-xs-2 col-form-label">Pattern</label>
+    <label for="pattern" class="col-xs-2 col-form-label">Pattern</label>
     <div class="col-sm-4">
-      <input class="form-control" type="text" value="Pattern" id="example-text-input">
+      <input class="form-control" type="text" value="Pattern" id="pattern">
     </div>
   </div>
   <div class="form-group row">
-    <label for="example-text-input" class="col-xs-2 col-form-label">Style</label>
+    <label for="style" class="col-xs-2 col-form-label">Style</label>
     <div class="col-sm-4">
-      <input class="form-control" type="text" value="Style" id="example-text-input">
+      <input class="form-control" type="text" value="Style" id="style">
     </div>
   </div>
   <div class="form-group row">
-    <label for="example-url-input" class="col-xs-2 col-form-label">URL</label>
+    <label for="url" class="col-xs-2 col-form-label">URL</label>
     <div class="col-sm-4">
-      <input class="form-control" type="url" value="https://" id="example-url-input">
+      <input class="form-control" type="url" value="https://" id="url">
     </div>
   </div>
   <div class="form-group row">
-    <label for="example-number-input" class="col-xs-2 col-form-label">Retail Price $ </label>
+    <label for="retailPrice" class="col-xs-2 col-form-label">Retail Price $ </label>
     <div class="col-sm-4">
-      <input class="form-control" type="number" value="0.00" id="example-number-input">
+      <input class="form-control" type="number" value="0.00" id="retailPrice">
     </div>
   </div>
   <div class="form-group row">
-    <label for="example-number-input" class="col-xs-2 col-form-label">Wholesale Price $ </label>
+    <label for="wholesalePrice" class="col-xs-2 col-form-label">Wholesale Price $ </label>
     <div class="col-sm-4">
-      <input class="form-control" type="number" value="0.00" id="example-number-input">
+      <input class="form-control" type="number" value="0.00" id="wholesalePrice">
     </div>
   </div>
 </div>
